--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -86,7 +86,13 @@ asserted unless it adds additional information.
       </p>
       <p>In subfigure <strong>a)</strong> the <span class="repeated">prov:qualifiedUsage</span> property parallels the <span class="repeated">prov:used</span> property, and references an instance of <span class="repeated">prov:Usage</span> that provides attributes of the <span class="repeated">prov:used</span> relation between the Activity and Entity. The <span class="repeated">prov:entity</span> property is used to cite the Entity that was used by the Activity. In this case, the time that the Activity used the Entity is provided using the <span class="repeated">prov:atTime</span> property and a literal <span class="repeated">xsd:dateTime</span> value.
       </p>
-      <p>Similarly in subfigure <strong>j)</strong>, the <span class="repeated">prov:qualifiedAssociation</span> property parallels the <span class="repeated">prov:wasAssociatedWith</span> property, and references an instance of <span class="repeated">prov:Association</span> that provides attributes of the <span class="repeated">prov:wasAssociatedWith</span> relation between the Activity and Agent. The <span class="repeated">prov:agent</span> property is used to cite the Agent that was involved in the Activity. In this case, the plan that the Agent used is provided using the <span class="repeated">prov:hadPlan</span> property and an instance of <span class="repeated">prov:Plan</span>.
+      <p>Similarly in subfigure <strong>j)</strong>, the <span class="repeated">prov:qualifiedAssociation</span> property parallels the 
+      <span class="repeated">prov:wasAssociatedWith</span> property, and references an instance of 
+      <span class="repeated">prov:Association</span> that provides attributes of the 
+      <span class="repeated">prov:wasAssociatedWith</span> relation between the Activity and Agent. The 
+      <span class="repeated">prov:agent</span> property is used to cite the Agent that was involved in the Activity. 
+      In this case, the plan that the Agent used is provided using the 
+      <a href="#hadPlan" class="qname">prov:hadPlan</a> property and an instance of <a href="#Plan" class="qname">prov:Plan</span>.
       </p>
 
        <div id="qualified-terms-figure" style="text-align: center;" class="figure">
