save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -50,10 +50,9 @@
 	  </p>
 	  
       <div class="note">
-      <p>Note: <span class="repeated">prov:mentionOf</span> and <span class="repeated">prov:asInBundle</span> features are "<a href="http://www.w3.org/2005/10/Process-20051014/tr#cfi">at risk</a>" and may be removed from this specification based on feedback. Please send feedback to public-prov-comments@w3.org.</p>
+      <p>The <span class="repeated">prov:mentionOf</span> and <span class="repeated">prov:asInBundle</span> properties are "<a href="http://www.w3.org/2005/10/Process-20051014/tr#cfi">at risk</a>" and may be removed from this specification based on feedback. Please send feedback to public-prov-comments@w3.org.</p>
 
-      <p>The "Mention" construct might be removed from PROV if implementation experience reveals problems with supporting this construct. 
-      Since PROV-O uses <span class="repeated">prov:mentionOf</span> and <span class="repeated">prov:asInBundle</span> to encode "Mention", these two properties might also be removed under the same conditions.</p>
+      <p>These two properties are used to encode the PROV-DM's <a href="http://dvcs.w3.org/hg/prov/raw-file/default/model/prov-dm.html#term-mention">Mention construct</a>, which might be removed from PROV if implementation experience reveals problems with supporting this construct. 
       </div>
 
       <p>
