save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -36,9 +36,9 @@
       In the OWL file iteself, the annotation properties <span class="qname">prov:qualifiedForm</span> and <span class="qname">prov:unqualifiedForm</span> provide the same linkages between the unqualified properties and their qualifiying terms.
 
          The influence classes (e.g. <span class="repeated">prov:Association</span>, <span class="repeated">prov:Usage</span>) are extensions of 
-         <a class="qname" href="#Influence">prov:Influence</a>, 
+         <a class="qname" href="#Influence">prov:Influence</a> and either 
          <a class="qname" href="#EntityInfluence">prov:EntityInfluence</a>, 
-         <a class="qname" href="#ActivityInfluence">prov:ActivityInfluence</a>, and
+         <a class="qname" href="#ActivityInfluence">prov:ActivityInfluence</a>, or
          <a class="qname" href="#AgentInfluence">prov:AgentInfluence</a>, which determine the property to use to cite the influencing resource (either
        <a class="qname" href="#entity">prov:entity</a>,
        <a class="qname" href="#activity">prov:activity</a>, or
