save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -17,8 +17,8 @@
       <a href='#startedAtTime' class="qname">prov:startedAtTime</a> and <a href='#endedAtTime' class="qname">prov:endedAtTime</a>, respectively), they can  
       <strong>use</strong> Entities during their lifespan, and can <strong>generate</strong> other Entities (described using 
       <a href='#used' class="qname">prov:used</a> and <a href='#wasGeneratedBy' class="qname">prov:wasGeneratedBy</a>, respectively). 
-      For example, a blog writing activity may use a particular dataset and generate a bar chart. Usage and generation can be applied to create provenance chains of 
-      alternating Activities and Entities. 
+      For example, a blog writing activity may use a particular dataset and generate a bar chart. 
+      Provenance chains of alternating Activities and Entities can be created by applying usage and generation.
       Arbitrary RDF properties can be used to describe the fixed aspects of an Entity that are interesting to a particular application (for example, 
       the file size and format of the dataset, or the aspect ratio of the bar chart).
       </p>
