--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -31,7 +31,7 @@
       <p>
       A <span class="repeated">prov:Bundle</span> is a named set of provenance descriptions that enables the expression of provenance of provenance.
       It is important to note that the set of provenance descriptions can assume forms beyond PROV-O triples, such as videotaped testimony or scribbles on a drink napkin. 
-      The extension of Bundle that contains only PROV-O assertions is not named by PROV or PROV-O, since it is more appropriate to do so using other recommendations, 
+      The subclass of Bundle that contains PROV-O assertions is not provided by PROV-O, since it is more appropriate to do so using other recommendations, 
       standards, or technologies. In any case, a Bundle of PROV-O assertions is an abstract set of RDF triples, and adding or removing a triple creates a distinct 
       Bundle of PROV-O assertions.
 		</p>
