save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -27,7 +27,7 @@
       Activity, but the Entity itself is not interesting. So, the <span class="repeated">prov:wasInformedBy</span> property allows the assertion of provenance chains comprising only Activities.
       </p>
 
-      <p>Property chains of Entities can be formed using the <a href='#wasDerivedFrom' class="qname">prov:wasDerivedFrom</a> property.
+      <p>Provenance chains of Entities can be formed without Activities using the <a href='#wasDerivedFrom' class="qname">prov:wasDerivedFrom</a> property.
          A derivation is a transformation of one entity into another. For example, if the Activity that created the bar chart is not interesting,
           then we can say that the bar chart <span class="repeated">prov:wasDerivedFrom</span> the dataset.
          Arbitrary RDF properties can be used to describe the fixed aspects of an Entity that are interesting to a particular application (for example, 
