--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -15,7 +15,7 @@
 
       <p>Activities <strong>start</strong> and <strong>end</strong> at particular points in time (described using properties 
       <a href='#startedAtTime' class="qname">prov:startedAtTime</a> and <a href='#endedAtTime' class="qname">prov:endedAtTime</a>, respectively) 
-      and during their lifespan can  <strong>use</strong> and <strong>generate</strong> other Entities (described using 
+      and during their lifespan can  <strong>use</strong> and <strong>generate</strong> a variety of Entities (described using 
       <a href='#used' class="qname">prov:used</a> and <a href='#wasGeneratedBy' class="qname">prov:wasGeneratedBy</a>, respectively). 
       For example, a blog writing activity may use a particular dataset and generate a bar chart. 
       Provenance chains of alternating Activities and Entities can be created by applying usage and generation.
