--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -18,7 +18,7 @@
       and during their lifespan can  <strong>use</strong> and <strong>generate</strong> a variety of Entities (described using 
       <a href='#used' class="qname">prov:used</a> and <a href='#wasGeneratedBy' class="qname">prov:wasGeneratedBy</a>, respectively). 
       For example, a blog writing activity may use a particular dataset and generate a bar chart. 
-      Provenance chains of Activities and Entities can be created by applying usage and generation.
+      By applying usage and generation, one can construct provenance chains of both Activities and Entities.
       </p>
 
       <p>In addiition, we can say that an Activity <a href='#wasInformedBy' class="qname">prov:wasInformedBy</a>
