--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -92,7 +92,7 @@ asserted unless it adds additional information.
       <span class="repeated">prov:wasAssociatedWith</span> relation between the Activity and Agent. The 
       <span class="repeated">prov:agent</span> property is used to cite the Agent that was involved in the Activity. 
       In this case, the plan that the Agent used is provided using the 
-      <a href="#hadPlan" class="qname">prov:hadPlan</a> property and an instance of <a href="#Plan" class="qname">prov:Plan</span>.
+      <a href="#hadPlan" class="qname">prov:hadPlan</a> property and an instance of <a href="#Plan" class="qname">prov:Plan</a>.
       </p>
 
        <div id="qualified-terms-figure" style="text-align: center;" class="figure">
@@ -101,7 +101,7 @@ asserted unless it adds additional information.
             <img src="http://dvcs.w3.org/hg/prov/raw-file/tip/ontology/diagram-history/2012-05-03/qualified-patterns.svg"
                  style="width: 100%; min-width: 25em; max-width: 70em" 
                  alt="Express association between an activity and an agent using a binary relationship and an alternatie qualified relationship"/>
-            <div class="figcaption"><a href="#qualified-terms-figure">Figure 3</a>. </div>
+            <div class="figcaption"><a href="#qualified-terms-figure">Figure 3</a>: The properties and classes to use (in blue) to qualify unqualified influence relations (dotted black). Quotation, Revision, and Source are omitted because they are special forms of Derivation and follow the same pattern as subfigure g.</div>
        </div>
 
 
