--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -99,9 +99,9 @@ asserted unless it adds additional information.
             <!-- When publishing to w3c: replace prov-o-diagrams/ with diagrams/ -->
             <!--img src="prov-o-diagrams/Qualified-Association.png"-->
             <img src="http://dvcs.w3.org/hg/prov/raw-file/tip/ontology/diagram-history/2012-05-03/qualified-patterns.svg"
-                 style="width: 100%; min-width: 25em; max-width: 70em" 
+                 style="width: 70%; min-width: 25em; max-width: 70em" 
                  alt="Express association between an activity and an agent using a binary relationship and an alternatie qualified relationship"/>
-            <div class="figcaption"><a href="#qualified-terms-figure">Figure 3</a>: The properties and classes to use (in blue) to qualify unqualified influence relations (dotted black). Quotation, Revision, and Source are omitted because they are special forms of Derivation and follow the same pattern as subfigure g.</div>
+            <div class="figcaption"><a href="#qualified-terms-figure">Figure 3</a>: The properties and classes to use (in blue) to qualify unqualified influence relations (dotted black). Quotation, Revision, and Source are omitted because they are special forms of Derivation and follow the same pattern as subfigure <strong>g</strong>.</div>
        </div>
 
 
