save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -101,7 +101,7 @@ asserted unless it adds additional information.
             <img src="http://dvcs.w3.org/hg/prov/raw-file/tip/ontology/diagram-history/2012-05-03/qualified-patterns.svg"
                  style="width: 70%; min-width: 25em; max-width: 70em" 
                  alt="Express association between an activity and an agent using a binary relationship and an alternatie qualified relationship"/>
-            <div class="figcaption"><a href="#qualified-terms-figure">Figure 3</a>: Illustration of the properties and classes to use (in blue) to qualify unqualified influence relations (dotted black).<br/>
+            <div class="figcaption"><a href="#qualified-terms-figure">Figure 3</a>: Illustration of the properties and classes to use (<span style="color: blue">in blue</span>) to qualify unqualified influence relations (dotted black).<br/>
             <a href="#Quotation">Quotation</a>, <a href="#Revision">Revision</a>, and <a href="#Source">Source</a> are omitted because they are special forms of <a href="#Derivation">Derivation</a> and follow the same pattern as subfigure <strong>g</strong>.</div>
        </div>
 
