save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -95,13 +95,13 @@ asserted unless it adds additional information.
       The <span class="repeated">prov:entity</span> property is used to cite the Entity that was used by the Activity. 
       In this case, the time that the Activity used the Entity is provided using the <a href=#atTime" class="qname">prov:atTime</a> property and a literal 
       <span class="repeated">xsd:dateTime</span> value. The <span class="repeated">prov:atTime</span> property can be used to describe any 
-      <a href="#InstantaneousEvent" class="qname">prov:InstantaneousEvent</a>, including the five subclasses of 
+      <a href="#InstantaneousEvent" class="qname">prov:InstantaneousEvent</a>.<!--, including the five subclasses of 
       <a href="#Influence" class="qname">prov:Influence</a>: 
       <a href="#Start" class="qname">prov:Start</a>, 
       <a href="#Generation" class="qname">prov:Generation</a>, 
       <a href="#Usage" class="qname">prov:Usage</a>, 
       <a href="#Invalidation" class="qname">prov:Invalidation</a>, and
-      <a href="#End" class="qname">prov:End</a>.
+      <a href="#End" class="qname">prov:End</a>.-->
       </p>
 
       <p>Similarly in subfigure <strong>j</strong>, the <span class="repeated">prov:qualifiedAssociation</span> property parallels the 
