save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -108,7 +108,7 @@ asserted unless it adds additional information.
       <span class="repeated">prov:Association</span> that provides attributes of the 
       <span class="repeated">prov:wasAssociatedWith</span> relation between the Activity and Agent. The 
       <span class="repeated">prov:agent</span> property is used to cite the Agent that was involved in the Activity. 
-      In this case, the plan that the Agent used is provided using the 
+      In this case, the plan of actions and steps that the Agent used to achieve its goals is provided using the 
       <a href="#hadPlan" class="qname">prov:hadPlan</a> property and an instance of <a href="#Plan" class="qname">prov:Plan</a>.
       </p>
 
