save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -104,8 +104,8 @@ asserted unless it adds additional information.
       </p>
 
       <p>Similarly in subfigure <strong>j</strong>, the <span class="repeated">prov:qualifiedAssociation</span> property parallels the 
-      <span class="repeated">prov:wasAssociatedWith</span> property, and references an instance of 
-      <span class="repeated">prov:Association</span> that provides attributes of the 
+      <span class="repeated">prov:wasAssociatedWith</span> property and references an instance of 
+      <span class="repeated">prov:Association</span>, which in turn provides attributes of the 
       <span class="repeated">prov:wasAssociatedWith</span> relation between the Activity and Agent. The 
       <span class="repeated">prov:agent</span> property is used to cite the Agent that influenced the Activity. 
       In this case, the plan of actions and steps that the Agent used to achieve its goals is provided using the 
