save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -90,8 +90,8 @@ asserted unless it adds additional information.
       <a class="qname" href="#qualifiedAssociation">prov:qualifiedAssociation</a>, <a class="qname" href="#Association">prov:Association</a>, and <a class="qname" href="#agent">prov:agent</a> are used to qualify <span class="repeated">prov:wasAssociatedWith</span> relations. This pattern applies to the eleven other influence relations that can be qualified.
       </p>
 
-      <p>In subfigure <strong>a</strong> the <span class="repeated">prov:qualifiedUsage</span> property parallels the <span class="repeated">prov:used</span> property, and references an instance of 
-      <span class="repeated">prov:Usage</span> that provides attributes of the <span class="repeated">prov:used</span> relation between the Activity and Entity. 
+      <p>In subfigure <strong>a</strong> the <span class="repeated">prov:qualifiedUsage</span> property parallels the <span class="repeated">prov:used</span> property and references an instance of 
+      <span class="repeated">prov:Usage</span>, which in trun provides attributes of the <span class="repeated">prov:used</span> relation between the Activity and Entity. 
       The <span class="repeated">prov:entity</span> property is used to cite the Entity that was used by the Activity. 
       In this case, the time that the Activity used the Entity is provided using the <a href=#atTime" class="qname">prov:atTime</a> property and a literal 
       <span class="repeated">xsd:dateTime</span> value. The <span class="repeated">prov:atTime</span> property can be used to describe any 
