--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -110,7 +110,9 @@ asserted unless it adds additional information.
       <span class="repeated">prov:agent</span> property is used to cite the Agent that influenced the Activity. 
       In this case, the plan of actions and steps that the Agent used to achieve its goals is provided using the 
       <a href="#hadPlan" class="qname">prov:hadPlan</a> property and an instance of <a href="#Plan" class="qname">prov:Plan</a>. Further, the 
-      <a href="#hadRole" class="qname">prov:hadRole</a> property and <a href="#Role" class="qname">prov:Role</a> class can be used to describe the function that the agent served with respect to an activity. Both <span class="repeated">prov:Plan</span> and <span class="repeated">prov:Role</span> are left to be extended by applications.
+      <a href="#hadRole" class="qname">prov:hadRole</a> property and <a href="#Role" class="qname">prov:Role</a> 
+      class can be used to describe the function that the agent served with respect to the Activity. 
+      Both <span class="repeated">prov:Plan</span> and <span class="repeated">prov:Role</span> are left to be extended by applications.
       </p>
 
        <div id="qualified-terms-figure" style="text-align: center;" class="figure">
