save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -39,9 +39,10 @@
 	  <p>More general and more specific properties are also provided by the expanded terms. More generally, the property <a href="#wasInfluencedBy" class="qname">prov:wasInfluencedBy</a> is a superproperty that relates any influenced Entity, Activity, or Agent to any other influencing Entity, Activity, or Agent that had an effect on its characteristics. 
         More specifically, three subproperties of <span class="repeated">prov:wasDerivedFrom</span> are provided for certain kinds of derivation among Entities: 
       <a href="#wasQuotedFrom" class="qname">prov:wasQuotedFrom</a> cites a potentially larger Entity (such as a book, blog, or image) from which a new Entity was created
-      by repeating some or all of the original Entity, 
-      <a href="#wasRevisionOf" class="qname">prov:wasRevisionOf</a> cites an older version of a revised Entity (such as a first edition of a book), and 
-      <a href="#hadPrimarySource" class="qname">prov:hadPrimarySource</a> cites an ancestor Entity produced by some agent with direct experience and 
+      by repeating some or all of the original, 
+      <a href="#wasRevisionOf" class="qname">prov:wasRevisionOf</a> indicates that the derived Entity contains substantial content from the original Entity 
+      (e.g., two editions of a book), and 
+      <a href="#hadPrimarySource" class="qname">prov:hadPrimarySource</a> cites an older Entity produced by some agent with direct experience and 
       knowledge about the topic (such as a reading from a sensor, or a journal written during an historical event). 
       </p>
 	  
