--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -125,7 +125,7 @@ asserted unless it adds additional information.
             Illustration of patterns for qualifying starting-point relations, using classes prov:Usage, prov:Generation, prov:Invalidation, prov:Communication, 
             prov:Start, prov:End, prov:Derivation, prov:Delegation, prov:Attribution and prov:Association.
          Illustration of the properties and classes to use (<span style="color: blue">in blue</span>)
-             to qualify unqualified influence relations (dotted black).<br/>
+             to qualify the unqualified influence relations (dotted black).<br/>
             <a href="#Quotation">Quotation</a>, <a href="#Revision">Revision</a>, and <a href="#Source">Source</a> 
              are omitted because they are special forms of <a href="#Derivation">Derivation</a> and follow the same pattern as subfigure <strong>g</strong>.</div>
        </div>
