--- a/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-qualified-terms.inc.html
@@ -122,10 +122,10 @@ asserted unless it adds additional information.
                  style="width: 70%; min-width: 25em; max-width: 70em" 
                  alt="Express association between an activity and an agent using a binary relationship and an alternatie qualified relationship"/>
             <div class="figcaption"><a href="#qualified-terms-figure">Figure 3</a>: 
-            Illustration of patterns for qualifying starting-point relations, using classes prov:Usage, prov:Generation, prov:Invalidation, prov:Communication, 
-            prov:Start, prov:End, prov:Derivation, prov:Delegation, prov:Attribution and prov:Association.
-         Illustration of the properties and classes to use (<span style="color: blue">in blue</span>)
-             to qualify the unqualified influence relations (dotted black).<br/>
+            Illustration of the properties and classes to use (<span style="color: blue">in blue</span>)
+            to qualify the 
+            <a href="#description-starting-point-terms">starting point</a> and 
+            <a href="description-expanded-terms">expanded</a> influence relations (dotted black). <br/>
             <a href="#Quotation">Quotation</a>, <a href="#Revision">Revision</a>, and <a href="#Source">Source</a> 
              are omitted because they are special forms of <a href="#Derivation">Derivation</a> and follow the same pattern as subfigure <strong>g</strong>.</div>
        </div>
