--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -77,7 +77,7 @@ The properties <a href="#generatedAtTime" class="qname">prov:generatedAtTime</a>
       Activities may also be started or ended by Entities, which are described using the properties <a href="#wasStartedBy" class="qname">prov:wasStartedBy</a> and <a href="#wasEndedBy" class="qname">prov:wasEndedBy</a>, respectively. Since Entities may start or end Activities, and Agents may be Entities, then Agents may also start or end Activities.
       </p>
         <div about="#narrative-example-expanded-1" typeof="prov:Entity" class="exampleOuter" xmlns:prov="http://www.w3.org/ns/prov#">
-           <p>We illustrate below the use of the expanded terms using the crime file example from the previous section as reference. Agent Derek now publishes a post about
+           <p>We illustrate below the use of the expanded terms using the crime file example from the previous section as reference. Derek then published a post about
 		   his work with the aggregated file:
             </p> 
 		   
