save-before-prepare

--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -1,6 +1,6 @@
      <section id="description-starting-point-terms">
 	  	<h3>Starting Point Terms</h3>
-       <p>The Starting Point category is a small collection of classes and properties that can be used to create simple, initial provenance descriptions.
+       <p>The Starting Point category is a small set of classes and properties that can be used to create simple, initial provenance descriptions.
          Three classes provide a basis for the rest of PROV-O:  
        </p>
          <ul>
@@ -34,7 +34,7 @@
          the file size and format of the dataset, or the aspect ratio of the bar chart).
       </p>
 
-      <p>An Agent can be responsible for an Activity or an Entity, which is described using the properties <a href='#wasAssociatedWith' class="qname">prov:wasAssociatedWith</a> and <a href='#wasAttributedTo' class="qname">prov:wasAttributedTo</a>, respectively. Agents can also be responsible for other Agents' actions. In this case, the Agent that influenced an Activity or Entity <a href='#actedOnBehalfOf' class="qname">prov:actedOnBehalfOf</a> another Agent that may have had less influence, but still bears some responnsibility for the resulting Activity or Entity.
+      <p>An Agent can be responsible for an Activity or an Entity, which is described using the properties <a href='#wasAssociatedWith' class="qname">prov:wasAssociatedWith</a> and <a href='#wasAttributedTo' class="qname">prov:wasAttributedTo</a>, respectively. Agents can also be responsible for other Agents' actions. In this case, the Agent that influenced an Activity or Entity <a href='#actedOnBehalfOf' class="qname">prov:actedOnBehalfOf</a> another Agent that also bears some responnsibility for the resulting Activity or Entity.
 
       <div id="starting-points-figure" style="text-align: center;" class="figure">
             <!-- When publishing to w3c: replace prov-o-diagrams/ with diagrams/ -->
